cmake_minimum_required(VERSION 3.5)
project( DisplayImage )
find_package( OpenCV REQUIRED )
#SET(CMAKE_CXX_COMPILER /usr/bin/g++)
#include_directories(${PROJECT_SOURCE_DIR} ${OpenCV_DIRS})
#add_library(raytracing SHARED raytracing.cpp)
#target_link_libraries(raytracing ${OpenCV_LIBS})
add_executable( DisplayImage  DisplayImage.cpp raytracing.cpp color.cpp vector3.cpp checkerboard.cpp triangle.cpp trianglemesh.cpp aabb.cpp octree.cpp)
target_link_libraries( DisplayImage ${OpenCV_LIBS})
